--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -9,14 +10,11 @@ body {
   background-image: linear-gradient(45deg, #28124f, #3f09b3);
   color: #fff;
   overflow-x: hidden;
-  margin-bottom: 50px;
   min-height: 100vh;
 }
 
 .App {
-  max-width: 1200px;
   margin: 0 auto;
-  padding: 0 20px;
 }
 
 section {
